# termux-tools

./: .gitignore  CHANGELOG.md  README.md  README.zh.md  bootstrap.sh  install.sh
.github/workflows/: release.yml
install-scripts/: install-tui
scripts/: extract-changelog.sh  release.sh
tui/: termux-tools  xynrin
tui/lang/: en.sh  zh.sh
tui/modules/: _common.sh  backup.sh  beautify.sh  boot.sh  bootstrap.sh  cleanup.sh  language.sh  mirror.sh  proot.sh  ssh.sh  sysinfo.sh  update.sh  x11.sh
tui/modules/backup/: _init.sh  backup.sh  launcher.sh  main.sh  restore.sh
tui/modules/beautify/: _init.sh  main.sh  preview.sh  shells.sh  themes.sh  uninstall.sh
tui/modules/boot/: _init.sh  add.sh  list.sh  main.sh  remove.sh  toggle.sh
tui/modules/cleanup/: _init.sh  deep.sh  main.sh  safe.sh  scan.sh
tui/modules/ssh/: _init.sh  boot.sh  info.sh  install.sh  main.sh  start.sh  stop.sh
tui/modules/x11/: _init.sh  install.sh  main.sh  uninstall.sh
xynrin-tui/: Cargo.toml
xynrin-tui/src/: app.rs  changelog.rs  i18n.rs  log_event.rs  main.rs  runner.rs
xynrin-tui/src/ui/: log_panel.rs  menu.rs  mod.rs  notes_panel.rs
xynrin-tui/src/ui/banner/: mod.rs
xynrin-tui/src/ui/dashboard/: mod.rs
xynrin-tui/src/ui/footer/: mod.rs
xynrin-tui/src/ui/log_panel/: mod.rs
xynrin-tui/src/ui/notes_panel/: mod.rs
